// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthNav when a user is NOT authenticated doesn't render the logged-in state 1`] = `
<div
  className="bg-primary font-body-sm text-white text-right"
>
  <div
    className="grid-container"
  >
    <div
      className="grid-row"
    >
      <div
        className="grid-col-fill margin-y-1"
      />
    </div>
  </div>
</div>
`;

exports[`AuthNav when a user is authenticated renders the logged-in state 1`] = `
<div
  className="bg-primary font-body-sm text-white text-right"
>
  <div
    className="grid-container"
  >
    <div
      className="grid-row"
    >
      <div
        className="grid-col-fill margin-y-1"
      >
        <span
          className="display-inline-block margin-right-1"
        >
          email@address.com
        </span>
        <Button
          className="width-auto"
          inversed={true}
          onClick={[Function]}
          variation="unstyled"
        >
          Log out
        </Button>
      </div>
    </div>
  </div>
</div>
`;
